--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter-test</artifactId>
-      <version>2.1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
@@ -91,6 +85,11 @@
       <version>2.1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-typehandlers-jsr310</artifactId>
+      <version>1.0.2</version>
+    </dependency>
     <!-- json -->
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -135,7 +134,7 @@
     <dependency>
       <groupId>com.github.pagehelper</groupId>
       <artifactId>pagehelper-spring-boot-starter</artifactId>
-      <version>1.2.3</version>
+      <version>1.2.4</version>
     </dependency>
 
     <dependency>
