--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>cs</artifactId>
   <version>0.0.1</version>
   <packaging>war</packaging>
-  <name>cs</name>
+  <name>support</name>
   <description>CS 관리 서비스</description>
   <properties>
     <java.version>1.8</java.version>
